syntax = "proto3";
package io.pixelsdb.pixels.sink.proto;

import "record.proto";

option java_multiple_files = false;
option java_package = "io.pixelsdb.pixels.sink.proto";
option java_outer_classname = "SinkProto";

service PixelsSinkService {
  rpc WriteData(WriteRequest) returns (WriteResponse);
  rpc Flush(FlushRequest) returns (FlushResponse);
  rpc Transaction(TransactionRequest) returns (TransactionResponse);
}

message WriteRequest {
  string transaction_id = 1;
  string table = 2;
  OperationType operation = 3;
  int64 timestamp = 4;
  map<string, ColumnValue> before_data = 5;
  map<string, ColumnValue> after_data = 6;
}

message ColumnValue {
  oneof value {
    bytes bytes_val = 1;
    string string_val = 2;
    string number_val = 3;
    bool bool_val = 4;
  }
}

enum OperationType {
  INSERT = 0;
  UPDATE = 1;
  DELETE = 2;
  SNAPSHOT = 3;
  UNKNOWN = 4;
}

message WriteResponse {
  bool success = 1;
  string message = 2;
}

message FlushRequest {}

message FlushResponse {
  bool success = 1;
  string message = 2;
}

message TransactionRequest {
  io.pixelsdb.pixels.sink.proto.TransactionInfo transactionInfo = 1;
}

message TransactionResponse {
  bool success = 1;
  string message = 2;
}