syntax = "proto3";

package io.pixelsdb.pixels.sink.proto;


option java_package = "io.pixelsdb.pixels.sink.proto";
option java_outer_classname = "TransactionMetadataValue";

message TransactionMetadata {
  string status = 1;
  string id = 2;
  int64 event_count = 3;
  repeated DataCollection data_collections = 4;  
  int64 ts_ms = 5;              
  message DataCollection {
    string data_collection = 1;
    int64 event_count = 2; 
  }
}